Add API to delete user from division
